Fixed bug when sometime jumping to middle of next clip cause starting clip from begining. And rediced clips pointers animation to 0.2 sec.

--- a/platform/plugins/Q/web/css/video.css
+++ b/platform/plugins/Q/web/css/video.css
@@ -193,9 +193,9 @@
     width: 2px;
     height: 50%;
     background-color: red;
-    -webkit-transition: all 1s linear;
-    -moz-transition: all 1s linear;
-    -o-transition: all 1s linear;
-    -ms-transition: all 1s linear;
-    transition: all 1s linear;
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    transition: all .2s linear;
 }
